--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <java.version>16</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <threadCount>1</threadCount>
     </properties>
 
     <dependencies>
@@ -78,9 +79,59 @@
                 </pluginManagement>
             </build>
         </profile>
+        <profile>
+            <id>UITests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <suiteXmlFiles>
+                                <suiteXmlFile>profiles/UITests.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+                            <disableXmlReport>true</disableXmlReport>
+                            <testFailureIgnore>true</testFailureIgnore>
+                            <parallel>methods</parallel>
+                            <perCoreThreadCount>false</perCoreThreadCount>
+                            <threadCount>${threadCount}</threadCount>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>APITests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <suiteXmlFiles>
+                                <suiteXmlFile>profiles/APITests.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+                            <disableXmlReport>true</disableXmlReport>
+                            <testFailureIgnore>true</testFailureIgnore>
+                            <parallel>methods</parallel>
+                            <perCoreThreadCount>false</perCoreThreadCount>
+                            <threadCount>${threadCount}</threadCount>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
     <build>
+
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
