--- a/pom.xml
+++ b/pom.xml
@@ -58,89 +58,13 @@
         </dependency>
 
     </dependencies>
-    <profiles>
-        <profile>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <id>Default</id>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-surefire-plugin</artifactId>
-                            <version>2.22.2</version>
-                            <configuration>
-                                <skipTests>true</skipTests>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-        <profile>
-            <id>UITests</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.22.2</version>
-                        <configuration>
-                            <suiteXmlFiles>
-                                <suiteXmlFile>profiles/UITests.xml</suiteXmlFile>
-                            </suiteXmlFiles>
-                            <disableXmlReport>true</disableXmlReport>
-                            <testFailureIgnore>true</testFailureIgnore>
-                            <parallel>methods</parallel>
-                            <perCoreThreadCount>false</perCoreThreadCount>
-                            <threadCount>${threadCount}</threadCount>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>APITests</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.22.2</version>
-                        <configuration>
-                            <suiteXmlFiles>
-                                <suiteXmlFile>profiles/APITests.xml</suiteXmlFile>
-                            </suiteXmlFiles>
-                            <disableXmlReport>true</disableXmlReport>
-                            <testFailureIgnore>true</testFailureIgnore>
-                            <parallel>methods</parallel>
-                            <perCoreThreadCount>false</perCoreThreadCount>
-                            <threadCount>${threadCount}</threadCount>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-    <build>
 
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
-                <!-- References to interface static methods are allowed only at source level 1.8 or above -->
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
+                <version>3.0.0-M5</version>
             </plugin>
         </plugins>
     </build>
